; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_user.c_mach_memory_entry_purgable_control.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_user.c_mach_memory_entry_purgable_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VM_PURGABLE_SET_STATE_FROM_KERNEL = common dso_local global i64 0, align 8
@KERN_INVALID_ARGUMENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mach_memory_entry_purgable_control(i32 %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i64, i64* %6, align 8
  %9 = load i64, i64* @VM_PURGABLE_SET_STATE_FROM_KERNEL, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %12, i32* %4, align 4
  br label %18

13:                                               ; preds = %3
  %14 = load i32, i32* %5, align 4
  %15 = load i64, i64* %6, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @memory_entry_purgeable_control_internal(i32 %14, i64 %15, i32* %16)
  store i32 %17, i32* %4, align 4
  br label %18

18:                                               ; preds = %13, %11
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @memory_entry_purgeable_control_internal(i32, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
